--- a/html/tutorSubscription.html
+++ b/html/tutorSubscription.html
@@ -152,6 +152,16 @@
                         </div>
                         <div class="col-lg-6"></div>
                     </div>
+                    <div class="form-group required">
+                        <label class="col-lg-2 labelform">รูปภาพ</label>
+                        <div class="col-lg-4">
+                            <input type="file" class="form-control-file" id="profilePicFile" accept=".jpg, .jpeg, .png">
+                            <div style="width: 200px;height: auto; margin-top: 10px;">
+                                <img id="imgProfilePic" src="./images/icons8-full_image.png" style="width: 100%;max-height: 100%" />
+                            </div>
+                        </div>
+                        <div class="col-lg-6"></div>
+                    </div>
                     <br>
                     <br>
                 </form>
@@ -1001,7 +1011,7 @@
             var turClip = $('#txtClip').val();
             var inputIDCardFile = $('#inputIDCardFile').val();
             if (_gFBUser.email) {
-               if (!txtEmail || !txtFirstName || !txtLastName || !txtTel || !sex
+                if (!txtEmail || !txtFirstName || !txtLastName || !txtTel || !sex
                     || !uniId || !facId) {
                     $(".alert-danger").find("strong").text('โปรดระบุข้อมูลให้ครบถ้วน');
                     $(".alert-danger").show();
@@ -1075,8 +1085,48 @@
                     _gUser.turId = data.data.turId;
                     _gUser.turName = data.data.turName;
                     _gUserType = "tutor";
-
                     jQuery("#divShowUser").html(_gUser.turName);
+                    uploadProfilePicture(data.data.turId, msg);
+                },
+                error: function (jqXHR, status) {
+                    $(".alert-success").hide();
+                    $(".alert-danger").show();
+                    $('html, body').animate({ scrollTop: $('.breadcrumb').offset().top }, 'fast');
+                }
+
+            });
+
+        }
+        function readURL(input) {
+
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('#imgProfilePic').attr('src', e.target.result);
+                }
+
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+
+        $("#profilePicFile").change(function () {
+
+            readURL(this);
+        });
+
+        function uploadProfilePicture(turId, msg) {
+            var documentData = new FormData();
+            documentData.append('file', $('#profilePicFile')[0].files[0]);
+            console.log(documentData);
+            $.ajax({
+                url: _gServiceURL + "tutor/updateprofilepic/" + turId,
+                type: 'POST',
+                data: documentData,
+                cache: false,
+                contentType: false,
+                processData: false,
+                success: function (data, status, jqXHR) {
                     $(".alert-danger").hide();
                     $(".alert-success").show();
                     $(".alert-success").find("strong").text(msg);
@@ -1086,14 +1136,11 @@
                 error: function (jqXHR, status) {
                     $(".alert-success").hide();
                     $(".alert-danger").show();
-                    $(".alert-danger").find("strong").text(msg);
                     $('html, body').animate({ scrollTop: $('.breadcrumb').offset().top }, 'fast');
                 }
 
             });
-
         }
-
     </script>
 </body>
 
