--- a/html/parenteditclass.html
+++ b/html/parenteditclass.html
@@ -454,7 +454,7 @@
                                         <tbody id="sort-table" class="dragorder">
                                             <tr>
                                                 <td>1</td>
-                                                <td>เพศของติวเตอร์1</td>
+                                                <td>เพศของติวเตอร์</td>
                                             </tr>
                                             <tr>
                                                 <td>2</td>
