--- a/html/rate.html
+++ b/html/rate.html
@@ -22,10 +22,10 @@
             <tr>
                 <th data-column-id="subcId" data-identifier="true" data-type="numeric" data-width="10%">ลำดับ</th>
                 <th data-column-id="groupCourseName" data-width="30%">ชื่อกลุ่มวิชาเรียน</th>
-                <th data-column-id="onePerson" data-searchable="false" data-width="15%">1 คน</th>
-                <th data-column-id="twoPerson" data-searchable="false" data-width="15%">2 คน</th>
-                <th data-column-id="threePerson" data-searchable="false" data-width="15%">3 คน</th>
-                <th data-column-id="upperFourPerson" data-searchable="false" data-width="15%">4 คนขึ้นไป</th>
+                <th data-column-id="onePerson" data-searchable="false" data-width="15%">1 คน/ชั่วโมง/คน</th>
+                <th data-column-id="twoPerson" data-searchable="false" data-width="15%">2 คน/ชั่วโมง/คน</th>
+                <th data-column-id="threePerson" data-searchable="false" data-width="15%">3 คน/ชั่วโมง/คน</th>
+                <th data-column-id="upperFourPerson" data-searchable="false" data-width="15%">4 คนขึ้นไป/ชั่วโมง/คน</th>
             </tr>
         </thead>
     </table>
